chore: project clean up