@@ -35,12 +35,6 @@
     </dependency>
 
     <dependency>
-      <groupId>org.javatuples</groupId>
-      <artifactId>javatuples</artifactId>
-      <version>${javatuples.version}</version>
-    </dependency>
-
-    <dependency>
       <groupId>org.junit.jupiter</groupId>
       <artifactId>junit-jupiter-engine</artifactId>
       <version>${junit.version}</version>
@@ -57,13 +51,6 @@
     <dependency>
         <groupId>org.mockito</groupId>
         <artifactId>mockito-core</artifactId>
-        <version>${mockito.version}</version>
-        <scope>test</scope>
-    </dependency>
-
-    <dependency>
-        <groupId>org.mockito</groupId>
-        <artifactId>mockito-inline</artifactId>
         <version>${mockito.version}</version>
         <scope>test</scope>
     </dependency>
@@ -90,11 +77,38 @@
         </plugin>
         <plugin>
           <artifactId>maven-surefire-plugin</artifactId>
-          <version>2.22.2</version>
+          <version>${surefire.version}</version>
+          <configuration>
+            <argLine>-XX:+EnableDynamicAgentLoading</argLine>
+          </configuration>
         </plugin>
         <plugin>
           <artifactId>maven-failsafe-plugin</artifactId>
-          <version>2.22.2</version>
+          <version>${surefire.version}</version>
+        </plugin>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-enforcer-plugin</artifactId>
+          <version>${enforcer.version}</version>
+          <executions>
+            <execution>
+              <id>enforce</id>
+              <goals>
+                <goal>enforce</goal>
+              </goals>
+              <configuration>
+                <rules>
+                  <requireJavaVersion>
+                    <version>[17,)</version>
+                  </requireJavaVersion>
+                  <requireMavenVersion>
+                    <version>[3.8,)</version>
+                  </requireMavenVersion>
+                  <dependencyConvergence/>
+                </rules>
+              </configuration>
+            </execution>
+          </executions>
         </plugin>
       </plugins>
     </build>
@@ -103,14 +117,15 @@
     <java.version>17</java.version>
     <maven.compiler.release>${java.version}</maven.compiler.release>
     <formatter.version>2.23.0</formatter.version>
+    <enforcer.version>3.4.1</enforcer.version>
+    <surefire.version>3.2.5</surefire.version>
     <usb4java.version>1.3.0</usb4java.version>
-    <typesafeconfig.version>1.4.2</typesafeconfig.version>
-    <slf4j.version>1.7.36</slf4j.version>
-    <jsoup.version>1.14.3</jsoup.version>
-    <javatuples.version>1.2</javatuples.version>
-    <junit.version>5.8.1</junit.version>
-    <logback.version>1.2.11</logback.version>
-    <mockito.version>4.5.1</mockito.version>
+    <typesafeconfig.version>1.4.3</typesafeconfig.version>
+    <slf4j.version>2.0.13</slf4j.version>
+    <jsoup.version>1.17.2</jsoup.version>
+    <junit.version>5.10.2</junit.version>
+    <logback.version>1.5.6</logback.version>
+    <mockito.version>5.11.0</mockito.version>
   </properties>
 
 
